# mcp-fastmcp-starter

./: README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: run_local.sh
src/mcp_fastmcp_starter/: server.py
src/mcp_fastmcp_starter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_server.py
